--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <div class="container">
                                 <div class="row">
                                    <div class="col-6">
-                                        <img  class="main2" src="file:///C:/L9/img/Introduction-to-science-fiction-The-best-sci-fi-books-for-newbies-to-the-genre-Header.jpg" height="300px" width="300px">
+                                        <img  class="main2" src="img/Introduction-to-science-fiction-The-best-sci-fi-books-for-newbies-to-the-genre-Header.jpg" height="300px" width="300px">
                                         <br>
                                    </div>
                                    <div class="col-6">
